# HDR10Plus_Editor

./: .gitignore  README.md  pylint.rc  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml
src/HDR10PlusEditor/: __main__.py
src/HDR10PlusEditor/HDR10Plus/: HDR10Plus.py  __init__.py  json.py
