[metadata]
name=HDR10PlusEditor
version=1.1.0
author=MiM
license = "GNU GPL v3"
license_file = LICENSE
description = "A simple editor for editing scenes in a HDR10+ JSON."
long_description = file: README.md
long_description_content_type = text/markdown
download_url = https://github.com/MiM-MiM/HDR10Plus_Editor/

[build-system]
requires = [
  "argparse",
  "pyjson",
  "pyio"]

[options]
package_dir= =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
	HDR10PlusEditor = HDR10PlusEditor.__main__:main
